--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
-@tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=Anuphan:wght@300;400;500;600;700&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Roboto:ital,wght@0,400;0,500;0,700;1,300;1,400&display=swap");
 
-body {
-  margin: 0;
-  padding: 0;
+@tailwind utilities;
+@tailwind base;
+
+.body {
+  font-family: "Inter";
 }
