--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,18 @@
 @import url("https://fonts.googleapis.com/css2?family=Anuphan:wght@300;400;500;600;700&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Roboto:ital,wght@0,400;0,500;0,700;1,300;1,400&display=swap");
 
-@tailwind utilities;
 @tailwind base;
+@tailwind utilities;
+@tailwind components;
 
 .body {
   font-family: "Inter";
+}
+
+/* buttons styles */
+.text-button {
+  @apply flex aspect-square items-center rounded-lg p-3 text-2xl hover:bg-[#E9EFFF]/80 active:bg-[#E9EFFF];
+}
+/* shapes */
+.circle-shape {
+  @apply flex h-10 w-10 items-center justify-center rounded-full bg-[#1D4ED8] text-xs text-white;
 }
