common input styles

--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,8 @@
 .circle-shape {
   @apply flex h-10 w-10 items-center justify-center rounded-full bg-[#1D4ED8] text-xs text-white;
 }
+
+/* input */
+.common-input {
+  @apply flex w-full items-center justify-between rounded-md border border-gray-300 bg-white px-3 py-2 focus:border-blue-500 focus:outline-none;
+}
